--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ numpy==1.23.5
 pandas==1.5.3
 requests==2.28.1
 xgboost==1.7.4
+pickleshare==0.7.5
+DateTime==5.0
+json5==0.9.6
+jsonschema==4.16.0
+matplotlib==3.7.0
